@@ -5,10 +5,12 @@ use strict;
 
 our $VERSION = '0.01';
 
+use Carp;
 use App::PNGCrush;
 use File::Basename;
 use File::Temp qw(tempdir);
 use Graphics::Magick;
+use Proc::Reliable;
 use Image;
 use Moose;
 
@@ -28,13 +30,14 @@ sub _mk_temp_dir { return tempdir( DIR => "/tmp" ) . '/'; }
 
 sub _optimize_png {
     my ($self) = @_;
-    my $crush = App::PNGCrush->new() or return;
+    my $crush = App::PNGCrush->new();
     $crush->set_options(
         ( "-d", $self->dir_out, "-rem", "alla", "-brute", "1" ),
         remove => [qw(gAMA cHRM sRGB iCCP)], );
-    $crush->run( $self->image->path ) or return;
-    return (
-        Image->new( { path => $self->dir_out . $self->image->_basename } ) );
+    $crush->run( $self->image->path ) or croak $!;
+    my $image = $self->dir_out . $self->image->_basename;
+    croak "Error on PNG optimization" if ( !-f $image );
+    return ( Image->new( { path => $image } ) );
 }
 
 sub _optimize_jpg {
@@ -44,17 +47,22 @@ sub _optimize_jpg {
         $self->dir_out . $self->image->_basename,
         $self->image->path,
     );
-    system(@cmd) == 0 or return;
-    return (
-        Image->new( { path => $self->dir_out . $self->image->_basename } ) );
+    my $proc = Proc::Reliable->new();
+    $proc->run(@cmd);
+    croak "Jpegtran Error:" . $proc->stderr() if $proc->status();
+    croak $! if ( system(@cmd) != 0 );
+    my $image = $self->dir_out . $self->image->_basename;
+    croak "Error on JPG optimization" if ( !-f $image );
+    return ( Image->new( { path => $image } ) );
 }
 
 sub _optimize_gif {
-    my ($self) = @_;
+    my ($self)     = @_;
     my $magick     = Graphics::Magick->new();
     my $output_png = $self->dir_out . $self->image->_basename . '.png';
     $magick->Read( $self->image->path );
     $magick->Write($output_png);
+    croak "Error on GIF optimization" if ( !-f $output_png );
     return ( Image->new( { path => $output_png } ) );
 }
 
