@@ -1,0 +1,10 @@
+http://www.booking.com/city/fr/paris.html
+http://www.booking.com/hotel/be/adagio-city-aparthotel-brussels-anspach.html
+http://www.booking.com/hotel/be/adagio-city-aparthotel-brussels-anspach.html
+http://www.booking.com/hotel/gb/cumberlandhotellondon.html
+http://www.booking.com/hotel/nl/casa-400.html
+http://www.booking.com/hotel/nl/casa-400.html
+http://www.booking.com/hotel/nl/grand-amrath-amsterdam.html
+http://www.booking.com/hotel/nl/museum.html
+http://www.booking.com/hotel/nl/renaissance.html
+http://www.booking.com/hotel/nl/renaissance.html
