@@ -1,3 +1,10 @@
+commit: 635a0aab2836f93c5b9f809f70e4a5a085b53a8f
+Author: Wed Aug 4 18:13:42 2010 +0200
+  Date: Otávio Fernandes <otaviof@gmail.com>
+
+	Optimizing for GIF, JPG and PNG are working. Good results with compression.
+
+
 commit: 892ad4cd1bf56f2d2e1b44f089d1d85c15d3b028
 Author: Tue Aug 3 15:09:12 2010 +0200
   Date: Otávio Fernandes <otaviof@gmail.com>
